--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,11 +42,16 @@ jobs:
       - name: Install Go dependencies
         run: go mod download
 
+      - name: Install gotestsum
+        run: go install gotest.tools/gotestsum@latest
+
       - name: Run go vet
         run: go vet ./...
 
-      - name: Run tests with coverage
-        run: go test -v -race -coverprofile=coverage.txt -covermode=atomic -short ./...
+      - name: Run tests with coverage and JUnit output
+        run: |
+          gotestsum --junitfile test-results/go-junit.xml -- \
+            -v -race -coverprofile=coverage.txt -covermode=atomic -short ./...
 
       - name: Upload Go coverage to Codecov
         uses: codecov/codecov-action@v5
@@ -57,6 +62,15 @@ jobs:
           name: go-coverage
           fail_ci_if_error: false
           verbose: true
+
+      - name: Upload Go test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./test-results/go-junit.xml
+          flags: backend
+          name: go-tests
 
   go-lint:
     name: Go Lint
@@ -132,6 +146,20 @@ jobs:
           name: frontend-coverage
           fail_ci_if_error: false
           verbose: true
+
+      - name: Upload Frontend test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./test-results/junit.xml
+          flags: frontend
+          name: frontend-tests
+
+      - name: Build with Bundle Analysis
+        run: npm run build
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   # Build check (ensures code compiles on all platforms)
   build-check:
