--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.9.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
