Refactor linting setup and enhance README documentation
- Consolidated linting scripts for frontend and Go files into a single script for improved maintainability.
- Updated package.json to streamline linting processes for TypeScript, JSON, CSS, and SCSS files.
- Enhanced README with additional features, improved formatting, and updated project structure details.
- Added comprehensive test cases for ConversionJobItem and ConversionQueue components to ensure robust functionality.
- Introduced new test files for QueueItem and converter service, enhancing overall test coverage.

--- a/package.json
+++ b/package.json
@@ -20,12 +20,8 @@
     "**/*.go": [
       "./scripts/lint-staged-go.sh"
     ],
-    "frontend/src/**/*.{ts,tsx}": [
-      "prettier --write --config frontend/.prettierrc",
-      "eslint --fix"
-    ],
-    "frontend/src/**/*.{json,css,scss}": [
-      "prettier --write --config frontend/.prettierrc"
+    "frontend/src/**/*.{ts,tsx,json,css,scss}": [
+      "./scripts/lint-staged-frontend.sh"
     ]
   }
 }
