--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -158,23 +158,41 @@ jobs:
       - name: Install Wails
         run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
 
-      - name: Verify NSIS is available
+      - name: Setup NSIS
         shell: pwsh
         run: |
           # NSIS should be pre-installed on windows-latest
-          $nsisPath = "C:\Program Files (x86)\NSIS\makensis.exe"
-          if (Test-Path $nsisPath) {
-            Write-Host "NSIS found at: $nsisPath"
-            & $nsisPath /VERSION
+          $nsisDir = "C:\Program Files (x86)\NSIS"
+          $nsisBin = "$nsisDir\Bin"
+          $nsisExe = "$nsisDir\makensis.exe"
+          
+          if (Test-Path $nsisExe) {
+            Write-Host "NSIS found at: $nsisExe"
+            & $nsisExe /VERSION
           } else {
-            Write-Host "NSIS not found at default path, checking PATH..."
-            $nsis = Get-Command makensis -ErrorAction SilentlyContinue
-            if ($nsis) {
-              Write-Host "NSIS found in PATH: $($nsis.Source)"
-            } else {
-              Write-Host "NSIS not found! Installing via Chocolatey..."
-              choco install nsis -y
-            }
+            Write-Host "NSIS not found at default path, installing via Chocolatey..."
+            choco install nsis -y
+          }
+          
+          # Add NSIS to PATH for subsequent steps (both the root and Bin directories)
+          # This persists across steps via GITHUB_PATH
+          if (Test-Path $nsisDir) {
+            Write-Host "Adding NSIS to PATH: $nsisDir"
+            echo "$nsisDir" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          }
+          if (Test-Path $nsisBin) {
+            Write-Host "Adding NSIS Bin to PATH: $nsisBin"
+            echo "$nsisBin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          }
+          
+          # Verify makensis is now accessible
+          Write-Host "Verifying makensis..."
+          $nsis = Get-Command makensis -ErrorAction SilentlyContinue
+          if ($nsis) {
+            Write-Host "makensis available at: $($nsis.Source)"
+          } else {
+            Write-Error "makensis not found in PATH after setup!"
+            exit 1
           }
 
       - name: Get version
@@ -191,19 +209,48 @@ jobs:
       - name: Update wails.json version
         shell: pwsh
         run: |
-          $version = "${{ steps.version.outputs.VERSION }}" -replace "^v", ""
+          $fullVersion = "${{ steps.version.outputs.VERSION }}"
+          # Strip 'v' prefix for product version
+          $version = $fullVersion -replace "^v", ""
+          # Extract only the numeric version part for NSIS (e.g., "1.0.0" from "1.0.0-beta.1")
+          # NSIS expects a version like "1.0.0" that becomes "1.0.0.0"
+          $nsisVersion = $version -replace "-.*$", ""
+          
+          Write-Host "Full version: $fullVersion"
+          Write-Host "Product version: $version"
+          Write-Host "NSIS-compatible version: $nsisVersion"
+          
           $json = Get-Content wails.json | ConvertFrom-Json
-          $json.info.productVersion = $version
+          $json.info.productVersion = $nsisVersion
           $json | ConvertTo-Json -Depth 10 | Set-Content wails.json
+          
+          Write-Host "Updated wails.json:"
+          Get-Content wails.json
 
       - name: Build Windows amd64
-        run: wails build -platform windows/amd64 -nsis -ldflags="-X main.Version=${{ steps.version.outputs.VERSION }}"
-
-      - name: List build output
         shell: pwsh
         run: |
-          Write-Host "Contents of build/bin:"
-          Get-ChildItem -Path build/bin -Recurse | Format-Table Name, Length, LastWriteTime
+          Write-Host "PATH: $env:PATH"
+          Write-Host "Checking makensis availability..."
+          $nsis = Get-Command makensis -ErrorAction SilentlyContinue
+          if ($nsis) {
+            Write-Host "makensis found at: $($nsis.Source)"
+            & makensis /VERSION
+          } else {
+            Write-Error "makensis NOT found in PATH!"
+            exit 1
+          }
+          
+          Write-Host "`nStarting Wails build..."
+          wails build -platform windows/amd64 -nsis -ldflags="-X main.Version=${{ steps.version.outputs.VERSION }}" -v 2
+          
+          Write-Host "`nBuild completed. Checking output..."
+          if (Test-Path "build/bin") {
+            Get-ChildItem -Path build/bin -Recurse | Format-Table Name, Length, LastWriteTime
+          } else {
+            Write-Error "build/bin directory not found!"
+            exit 1
+          }
 
       - name: Rename binaries
         shell: pwsh
